[package]
name = "bevy_scene_postprocess"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.1", default-features = false, features = [
  "bevy_scene",
  "bevy_asset",
  # TODO: Figure out how to support single-threaded cases.
  "multi_threaded",
] }

[dev-dependencies]
googletest = "0.12.0"
