[package]
name = "bevy_scene_postprocess"
version = "0.1.0"
edition = "2021"

description = "A crate for Bevy that provides a way to postprocess scenes after loading them"

license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andriyDev/bevy_scene_postprocess"

categories = ["game-development"]
keywords = ["bevy", "scene", "post", "process", "hook"]

exclude = [".github/"]

[dependencies]
bevy = { version = "0.14.1", default-features = false, features = [
  "bevy_scene",
  "bevy_asset",
  # TODO: Remove this once there is a release including
  # https://github.com/bevyengine/bevy/pull/13889
  "multi_threaded",
] }

[dev-dependencies]
crossbeam-channel = "0.5.13"
googletest = "0.12.0"
