[package]
name = "bevy_scene_postprocess"
version = "0.2.0-rc.1"
edition = "2021"

description = "A crate for Bevy that provides a way to postprocess scenes after loading them"

license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andriyDev/bevy_scene_postprocess"

categories = ["game-development"]
keywords = ["bevy", "scene", "post", "process", "hook"]

exclude = [".github/"]

[dependencies]
bevy = { version = "0.15.0-rc.1", default-features = false, features = [
  "bevy_scene",
  "bevy_asset",
] }

[dev-dependencies]
crossbeam-channel = "0.5.13"
googletest = "0.12.0"
# Required so tests can block on waiting for a channel.
bevy = { version = "0.15.0-rc.1", default-features = false, features = [
  "multi_threaded",
] }
